# AiSongTool

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  start.bat
.github/workflows/: dockerhub-description.yml  release.yml
aisongtool/: __init__.py  ace_step.py  ace_step_api.py  ace_step_schema.py  align.py  assets_lib.py  cli.py  config.py  cues.py  demucs.py  gemma_writer.py  karaoke.py  logging_utils.py  lyrics.py  nightcore.py  paths.py  pipeline_core.py  server.py  syrex.py  toolrunner.py  tools_install.py  video.py  whisperx_asr.py  zimage.py
aisongtool/flet_app/: app.py  jobs.py  main.py  notify.py  polling.py  state.py  terminal.py  win_job.py
aisongtool/flet_app/views/: _create_pipeline.py  _nightcore_chain.py  _tool_card.py  create.py  generate.py  nightcore.py  setup.py  terminal.py  tools.py  video.py
aisongtool/web/: app.py  jobs.py  layout.py  state.py  terminal.py  theme.py
aisongtool/web/pages/: generate.py  setup.py  terminal.py  video.py
demucs-uv/: pyproject.toml
desktop/: README.md  electron-builder.yml  package-lock.json  package.json  run.sh
desktop/scripts/: fetch-ffmpeg.mjs
desktop/src/main/: ace-step-schema.ts  bootstrap.ts  create-pipeline.ts  gpu.ts  index.ts  ipc-handlers.ts  jobs.ts  library.ts  nightcore-video-pipeline.ts  paths.ts  settings.ts  short-id.ts  terminal-history.ts  transcribe-pipeline.ts  unique-path.ts
desktop/src/main/tools/: ace-step-api.ts  ace-step.ts  gemma-writer.ts  nightcore.ts  syrex.ts  video.ts  zimage.ts
desktop/src/preload/: index.d.ts  index.ts
desktop/src/renderer/src/: App.tsx  env.d.ts
desktop/src/renderer/src/assets/: base.css  main.css
desktop/src/renderer/src/components/: GuiControl.tsx  SchemaForm.tsx  Terminal.tsx  ToolCard.tsx
desktop/src/renderer/src/views/: AceStepUI.tsx  Create.tsx  Setup.tsx  Tools.tsx
desktop/src/shared/: types.ts
gemma-uv/: pyproject.toml
packaging/: aisongtool.iss  aisongtool.spec  launcher.py
syrex-uv/: pyproject.toml
webui/: index.html
webui/static/: app.js  styles.css
whisperx-uv/: pyproject.toml
workers/: demucs_separate.py  gemma_gradio.py  gemma_write.py  syrex_visualizer.py  transcribe.py  zimage_generate.py  zimage_gradio.py
zimage-uv/: pyproject.toml
