[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aisongtool"
version = "0.7.0"
description = "Generate precise, line-by-line song subtitles using Demucs + WhisperX + lyrics alignment."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
  "pydantic>=2.0",
  "nicegui>=3.1.0",
  "pywebview>=5.0",
]

[dependency-groups]
dev = [
  "pyinstaller>=6.20.0",
]

[project.scripts]
aisongtool = "aisongtool.cli:main"

[tool.setuptools.packages.find]
include = ["aisongtool*"]

[tool.setuptools.package-data]
aisongtool = ["py.typed"]
