[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aisongtool"
version = "0.8.0"
description = "Generate precise, line-by-line song subtitles using Demucs + WhisperX + lyrics alignment."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "flet[all]>=0.85.3",
  "flet-video>=0.1.0",
]

[project.scripts]
aisongtool = "aisongtool.cli:main"

[tool.setuptools.packages.find]
include = ["aisongtool*"]

[tool.setuptools.package-data]
aisongtool = ["py.typed"]

[tool.flet]
product = "AiSongTool"
org = "tawhidUnhappy"
company = "AiSongTool"
copyright = "Copyright (c) 2026"

[tool.flet.app]
path = "aisongtool/flet_app"
