[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aisongtool"
version = "0.8.0"
description = "Generate precise, line-by-line song subtitles using Demucs + WhisperX + lyrics alignment."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
# flet[all]/flet-video/pyte/pywinpty (the Flet headless-server UI's own
# deps — see aisongtool/flet_app/, kept alive for the Docker deployment
# only, see Dockerfile) are intentionally NOT listed here: the Electron
# desktop app's own main-env `uv sync` reads this same pyproject.toml (see
# desktop/src/main/bootstrap.ts), and would otherwise drag the entire Flet
# GUI toolkit into a build that has no use for it. The Dockerfile installs
# them itself directly, then installs this package with `--no-deps` — so
# it never relied on this list providing them anyway.
dependencies = []

[project.scripts]
aisongtool = "aisongtool.cli:main"

[tool.setuptools.packages.find]
include = ["aisongtool*"]

[tool.setuptools.package-data]
aisongtool = ["py.typed"]

[tool.flet]
product = "AiSongTool"
org = "tawhidUnhappy"
company = "AiSongTool"
copyright = "Copyright (c) 2026"

[tool.flet.app]
path = "aisongtool/flet_app"
